# frwk-c

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
.github/: README.md
cmake/: helpers.cmake
examples/: CMakeLists.txt
examples/simple_window/: main.c
include/ct/: config.h
include/ct/config/: api.h  os_detection.h  types.h
include/ct/platform/: export.h  platform.h  window.h
include/purpur/: config.h
include/purpur/config/: api.h  os_detection.h  types.h
include/purpur/platform/: export.h  platform.h  window.h
src/: CMakeLists.txt
src/ct/: CMakeLists.txt
src/ct/platform/: CMakeLists.txt  platform.cpp  window.cpp
src/purpur/: CMakeLists.txt
src/purpur/platform/: CMakeLists.txt  platform.cpp  window.cpp
